# clink-ai-backend

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  test.py
backend/: Dockerfile
backend/alembic/: env.py
backend/alembic/versions/: 2025-08-06-21-55_065bd225792c.py
backend/app/: main.py  test.py
backend/app/agents/: factory.py  prompts.py  registry.py  schemas.py
backend/app/analysis/: customer_analysis.py  order_analysis.py  product_analysis.py
backend/app/analysis/notebooks/: customer_analysis.ipynb  order_analysis.ipynb  product_analysis.ipynb
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v2/: api.py
backend/app/core/: analysis_config.py  config.py
backend/app/crud/: analysis_crud.py  business_user_crud.py  chat_crud.py  logo_crud.py  offer_crud.py
backend/app/db/: database.py
backend/app/models/: __init__.py  enums.py
backend/app/models/local/: analysis_result.py  chat_message.py
backend/app/prompts/analysis_summary/: customer_prompt.txt  order_prompt.txt
backend/app/schemas/: __init__.py  agent.py  agent_schema.py  analysis.py  elgibility_criteria_schema.py
backend/app/scripts/: seed-data.py
backend/app/services/: analysis_service.py  chat_service.py  coupon_image_service.py  forecast_service.py  offer_service.py  s3_service.py
backend/app/summarization/: customer_kpi_summarization.py  order_kpi_summarization.py  product_kpi_summarization.py
backend/app/utils/: data_transformer.py  json_encoders.py  message_parser.py  offer_forecast_splitter.py  preprocessing.py
(+55 files in other folders)
