[project]
name = "clink-ai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.7",
    "pydantic-ai>=0.4.7",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.35.0",
    "uuid>=1.30",
    "pandas>=2.3.1",
    "redis>=6.4.0",
    "scikit-learn>=1.7.1",
    "openpyxl>=3.1.5",
]
